Double JDK 7 PermGen size to 160 MB
Unit tests fail frequently with PermGen messages in various configuration
tests (Windows and Linux).  Increasing PermGen size to 160 MB has removed
the PermGen related failures in my test environments.